fix(table): fix multiple sort error (#1872)
* fix(table): fix multiple sort error

* fix(link): hide text-decoration

* fix(drawer): add scrollbar

--- a/src/drawer/style/index.less
+++ b/src/drawer/style/index.less
@@ -130,7 +130,7 @@
     height: 100%;
     margin-bottom: 20px;
     padding: 0 36px;
-    overflow-y: auto;
+    .scrollbar();
     color: @gray-5;
   }
 }
